@@ -67,6 +67,11 @@ namespace MeGUI
                 chaptersGroupbox.Enabled = false;
             if (muxer.GetSupportedSubtitleTypes().Count == 0)
                 subtitles.Enabled = false;
+            else if (this.muxer.MuxerType == MuxerType.MKVMERGE)
+            {
+                subtitleTracks[0].ShowDefaultSubtitleStream = true;
+                subtitleTracks[0].chkDefaultStream.CheckedChanged += new System.EventHandler(base.chkDefaultStream_CheckedChanged);
+            }
             if (muxer.GetSupportedChapterTypes().Count == 0)
                 chaptersGroupbox.Enabled = false;
             if (muxer.GetSupportedDeviceTypes().Count == 0)
